--- a/style.css
+++ b/style.css
@@ -110,3 +110,89 @@ html {
 }
 
 /* End of Section-1 */
+
+/* Section-2 */
+.section-2{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: 50px;
+}
+
+.section2-heading{
+    font-size: 10rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    color: #999;
+    opacity: .1;
+    text-shadow: 2rem 2rem 2rem #aaa;
+}
+
+.customers-wrapper{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 70%;
+}
+
+
+.customer{
+    width:35rem;
+    height: 50rem;
+    background-color: #eee;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    box-shadow: 2rem 2rem 2rem #ddd, -2rem -2rem 2rem #eee;
+    border-radius: .5rem;
+    transition: box-shadow 0.5s;
+}
+
+.customer:first-child{
+    align-self: flex-end;
+}
+.customer:last-child{
+    align-self: flex-start;
+}
+
+.customer:hover{
+    box-shadow: 3rem 3rem 3rem #ddd, -3rem -3rem 3rem #eee;
+}
+
+.customer>i{
+    font-size: 4rem;
+    color: #d89641;
+}
+
+.customer-text{
+    font-size: 1.8rem;
+    text-align: justify;
+    padding: 0 5rem;
+    margin: 2.5rem 0;
+}
+
+.customer-text::first-letter{
+    margin-left: 2rem;
+}
+
+.customer-rating{
+    font-size: 2rem;
+    color:#d89641;
+    margin: 2rem;
+}
+
+.customer img{
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+}
+
+.customer-name{
+    font-size: 2rem;
+    font-weight: 700;
+    margin: 1rem auto;
+}
+/* End of Section-2 */
