--- a/style.css
+++ b/style.css
@@ -12,7 +12,11 @@
     font-family: 'Bellota Text', cursive;
     text-decoration: none;
     overflow: none;
+}
 
+.container{
+    overflow-x: hidden;
+    width: 100%;
 }
 
 html {
@@ -30,7 +34,7 @@ html {
 }
 
 .floating-bg {
-    background-color: rgba(220, 20, 60, 0.8);
+    background-color: rgba(88, 184, 168, 0.8);
     width: 150vw;
     height: 150vw;
     border-radius: 45%;
@@ -41,7 +45,7 @@ html {
 }
 .floating-bg::before {
     content: "";
-    background-color: rgba(220, 20, 60, 0.1);
+    background-color: rgba(88, 184, 168, 0.1);
     width: 100%;
     height: 100%;
     border-radius: 40%;
@@ -104,7 +108,7 @@ html {
     left: 50%;
     transform: translateX(-50%);
     font-size: 15rem;
-    color: rgba(220, 20, 60, 0.8);
+    color: rgba(88, 184, 168, 0.8);
     text-shadow: .1rem .1rem .2rem #ddd,
     -.1rem -.1rem .2rem #ddd;
 }
@@ -314,7 +318,7 @@ html {
 
   
 .story{
-   background-color: crimson;
+   background-color: rgb(71, 146, 134);
    color: #fff;
    width:100%;
    height: 100%;
@@ -350,3 +354,101 @@ html {
     text-indent: 3rem;
 }
 /* End of section-3  */
+
+/* section-4 contact & footer */
+
+.section-4{
+    width: 100%;
+    height: 130vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.form-container{
+    width: 80%;
+    height: 40%;
+    background-color:#e7e5e5 ;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    box-shadow: .3rem .3rem .3rem #ccc, -.1rem -.1rem .4rem #ccc;
+    border-radius: 0.5rem;
+    perspective: 100rem;
+  
+}
+
+.form-img{
+    width:55rem;
+    background-color: rgba(88, 184, 168, 0.8);
+    opacity: .8;
+    padding: 5rem;
+    box-shadow: -3rem 3rem 4rem #aaa;
+    border: .5rem;
+    transform: rotateY(20deg);
+    transition: all 0.5s;
+}
+
+.form-img:hover{
+    transform: translateY(-2rem) rotateY(20deg);
+    box-shadow: -1rem 1rem 3rem #aaa;
+}
+
+.contact-form{
+    display: flex;
+    flex-direction: column;
+    width: 45rem;
+    background-color: #fff;
+    border-radius: 0.5rem;
+    box-shadow: 3rem 3rem 4rem #aaa;
+    padding: 5rem;
+    transform: rotateY(-20deg);
+    transition: all 0.5s;
+    
+}
+
+.contact-form:hover, .contact-form:active{
+    transform: rotate(-20);
+    box-shadow: -2rem 2rem 2rem #aaa;
+}
+
+.contact-form input, .contact-form textarea  {
+    border: none;
+    margin:.5rem;
+    padding: 1rem;
+    box-shadow: inset .1rem .1rem 1rem #ddd, inset -.1rem -.1rem 1rem #ddd;
+    border-radius: .5rem;
+    font-size: 1.3rem;
+    letter-spacing: .1rem;
+}
+.contact-form textarea{
+    max-height: 15rem;
+    min-height: 10rem;
+    max-width: 100%;
+    min-width: 70%;
+}
+
+.contact-form input[type="submit"]{
+    background-color:rgba(88, 184, 168, 0.8);
+    color: #fff;
+    cursor: pointer;
+    letter-spacing: .5rem;
+    font-weight: bolder;
+    transition: bbackground-color .5s;
+}
+
+.contact-form input[type="submit"]:hover{
+    background-color:rgba(88, 184, 168, 1);
+}
+
+.copyright {
+    font-size: 1.8rem;
+    margin-top: 5rem;
+    text-align: center;
+    letter-spacing: .2rem;
+    color: #444;
+  }
+
+
+/* End of section-4 contact & footer */
