adjust navbar and add scroll-up button

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 /* End of Common Styles */
@@ -452,3 +453,24 @@ html {
 
 
 /* End of section-4 contact & footer */
+
+/* Scrolling Button */
+.scroll-up-btn{
+    width:5rem;
+    height:5rem;
+    background-color: rgba(88, 184, 168, 1);
+    position: fixed;
+    bottom: 5rem;
+    right: 5rem;
+    border-radius: 50%;
+    font-size: 1.6rem;
+    color:#fff; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.5s;
+}
+
+.scroll-up-btn:hover{
+    background-color: rgba(88, 184, 168, 0.8);
+}
